unpackaged/main/default/objects/Billing_Account__c/Billing_Account__c.object-meta.xml
<CustomObject>
    <description>Billing account information from the diffrent billing systems.</description>
    <label>Billing Account</label>
    <nameField>
        <label>Billing Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>