unpackaged/main/default/objects/Billing_Account__c/fields/Account_Balance__c.field-meta.xml
<CustomField>
    <fullName>Account_Balance__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Balance of account from billing system</description>
    <label>Account Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>