unpackaged/main/default/objects/Billing_Account__c/fields/Bill_to_Contact_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Contact_External_Id__c</fullName>
    <label>Bill to Contact External Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>