unpackaged/main/default/objects/Billing_Account__c/fields/Bill_To_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Postal_Code__c</fullName>
    <label>Bill To Postal Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>