unpackaged/main/default/objects/Billing_Account__c/fields/Bill_To_State__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_State__c</fullName>
    <label>Bill To State</label>
    <length>75</length>
    <type>Text</type>
</CustomField>