unpackaged/main/default/objects/Billing_Account__c/fields/Billing_System__c.field-meta.xml
<CustomField>
    <fullName>Billing_System__c</fullName>
    <description>Identifies the billing system that record originated from</description>
    <label>Billing System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Billing_System</valueSetName>
    </valueSet>
</CustomField>