unpackaged/main/default/objects/Billing_Account__c/fields/Billing_System_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Billing_System_Account_ID__c</fullName>
    <description>Record ID from the billing System</description>
    <inlineHelpText>Record ID provided by the Billing System</inlineHelpText>
    <label>Billing System Account ID</label>
    <length>75</length>
    <type>Text</type>
</CustomField>