unpackaged/main/default/objects/Billing_Account__c/fields/Consecutive_Payment_Declines__c.field-meta.xml
<CustomField>
    <fullName>Consecutive_Payment_Declines__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of consecutive payment declines for the account</description>
    <label>Consecutive Payment Declines</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>