unpackaged/main/default/objects/Billing_Account__c/fields/Credit_Card_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Expiration__c</fullName>
    <description>Date of expiration for CC card on file</description>
    <label>Credit Card Expiration</label>
    <type>Date</type>
</CustomField>