unpackaged/main/default/objects/Billing_Account__c/fields/Credit_Card_Last_4__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Last_4__c</fullName>
    <description>Last of of credit card on file</description>
    <label>Credit Card Last 4</label>
    <length>25</length>
    <type>Text</type>
</CustomField>