unpackaged/main/default/objects/Billing_Account__c/fields/Credit_Card_Type__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Type__c</fullName>
    <description>Credit card type attached to billing account</description>
    <label>Credit Card Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>