unpackaged/main/default/objects/Billing_Account__c/fields/Default_Payment_Method_ID__c.field-meta.xml
<CustomField>
    <fullName>Default_Payment_Method_ID__c</fullName>
    <description>External id of default payment method in the billing system</description>
    <label>Default Payment Method ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>