unpackaged/main/default/objects/Billing_Account__c/fields/Firm_ID__c.field-meta.xml
<CustomField>
    <fullName>Firm_ID__c</fullName>
    <description>Firm ID from firm&#39;s applicable product environment</description>
    <label>Firm ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>