unpackaged/main/default/objects/Billing_Account__c/fields/Historical_Import__c.field-meta.xml
<CustomField>
    <fullName>Historical_Import__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TRUE for billing accounts imported during migration</description>
    <label>Historical Import</label>
    <type>Checkbox</type>
</CustomField>