unpackaged/main/default/objects/Billing_Account__c/fields/Last_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Invoice_Date__c</fullName>
    <description>Date firm was last invoiced</description>
    <label>Last Invoice Date</label>
    <type>Date</type>
</CustomField>