unpackaged/main/default/objects/Billing_Account__c/fields/Last_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Payment_Date__c</fullName>
    <description>Most recent date of firm&#39;s last payment</description>
    <label>Last Payment Date</label>
    <type>Date</type>
</CustomField>