unpackaged/main/default/objects/Billing_Account__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Populated with a Lead instead of an Account if the firm converts and Lead has no been converted in Salesforce yet</description>
    <inlineHelpText>Populated with a Lead instead of an Account if the firm converts and Lead has no been converted in Salesforce yet</inlineHelpText>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Billing Accounts</relationshipLabel>
    <relationshipName>Billing_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>