unpackaged/main/default/objects/Billing_Account__c/fields/MyCase_ID__c.field-meta.xml
<CustomField>
    <fullName>MyCase_ID__c</fullName>
    <description>Account ID from legacy MyCase Salesforce</description>
    <inlineHelpText>Account ID from legacy MyCase Salesforce</inlineHelpText>
    <label>MyCase ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>