unpackaged/main/default/objects/Billing_Account__c/fields/Payment_Method_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method_Type__c</fullName>
    <description>Payment type set for billing account</description>
    <label>Payment Method Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>