unpackaged/main/default/objects/Billing_Account__c/fields/Subscription_Contract__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscription Contract</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Billing Accounts</relationshipLabel>
    <relationshipName>Billing_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>