unpackaged/main/default/objects/Billing_Account__c/fields/Zuora_Account_URL__c.field-meta.xml
<CustomField>
    <fullName>Zuora_Account_URL__c</fullName>
    <formula>HYPERLINK(&quot;https://na.zuora.com/apps/CustomerAccount.do?method=view&amp;id=&quot;&amp; Billing_System_Account_ID__c , &quot;Link to Account in Zuora&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zuora Account URL</label>
    <type>Text</type>
</CustomField>