unpackaged/main/default/objects/Billing_Account__c/fields/Zuora_Billing_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Zuora_Billing_Account_Number__c</fullName>
    <description>Unique account number in Zuora for firm</description>
    <externalId>true</externalId>
    <label>Zuora Billing Account Number</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>